--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
   background-color: #fbf8ff;
   background-image: url("data:image/svg+xml,%3Csvg width='84' height='48' viewBox='0 0 84 48' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M0 0h12v6H0V0zm28 8h12v6H28V8zm14-8h12v6H42V0zm14 0h12v6H56V0zm0 8h12v6H56V8zM42 8h12v6H42V8zm0 16h12v6H42v-6zm14-8h12v6H56v-6zm14 0h12v6H70v-6zm0-16h12v6H70V0zM28 32h12v6H28v-6zM14 16h12v6H14v-6zM0 24h12v6H0v-6zm0 8h12v6H0v-6zm14 0h12v6H14v-6zm14 8h12v6H28v-6zm-14 0h12v6H14v-6zm28 0h12v6H42v-6zm14-8h12v6H56v-6zm0-8h12v6H56v-6zm14 8h12v6H70v-6zm0 8h12v6H70v-6zM14 24h12v6H14v-6zm14-8h12v6H28v-6zM14 8h12v6H14V8zM0 8h12v6H0V8z' fill='%23000000' fill-opacity='0.07' fill-rule='evenodd'/%3E%3C/svg%3E");
   color: black;
-  font-style: Montserrat,san-serif;
+  font-style: Montserrat, san-serif;
   font-weight: 700;
   text-align: center;
   display: flex;
@@ -31,11 +31,26 @@ body {
  font-size: 2.75rem;
 }
 
+.long-quote{
+  font-size: 2rem;
+}
+
+.fa-quote-left{
+  font-size: 4rem;
+}
+
+.quote-author{
+  margin-top: 15px;
+  font-size: 2rem;
+  font-weight: 400;
+  font-style: italic;
+}
+
 /*
 #quote-containter{}
 
-.fa-quote-left{}
-.quote-author
+
+
 #quote-author{}
 #author{}
 .button-contianer{}
