added media query breakpoints

--- a/style.css
+++ b/style.css
@@ -46,6 +46,21 @@ body {
   font-style: italic;
 }
 
+/* Media Query: Tablet  or smaller*/
+
+@media screen and (max-width: 1000px){
+
+  .quote-container{
+    margin: auto 10px;
+  }
+
+  .quote-text{
+    font-size: 2.5rem;
+  }
+
+}
+
+
 /*
 #quote-containter{}
 
