--- a/style.css
+++ b/style.css
@@ -49,10 +49,29 @@ body {
 .button-contianer{
   margin-top: 15px;
   display: flex;
-  justify-content: center;
-
+  justify-content: space-between;
 }
 
+button{
+  cursor: pointer;
+  font-size: 1.2 rem;
+  height: 2.5rem;
+  border: none;
+  border-radius: 10px;
+  color: antiquewhite;
+  background-color: #333;
+  outline: none;
+  padding: 0.5rem 1.8 rem;
+  box-shadow: 0 0.3rem rgba(121,121,121, 0.65);
+}
+
+button:hover{
+  filter: brightness(150%);
+}
+
+button:active{
+  transform: translate(0, 0.3rem);
+}
 
 /*
 #quote-containter{}
