--- a/style.css
+++ b/style.css
@@ -61,8 +61,8 @@ button{
   color: antiquewhite;
   background-color: #333;
   outline: none;
-  padding: 0.5rem 1.8 rem;
-  box-shadow: 0 0.3rem rgba(121,121,121, 0.65);
+  padding: 1.5rem 1.8 rem;
+  box-shadow: 0 0.3rem rgba(125,125,125, 0.65);
 }
 
 button:hover{
@@ -71,6 +71,16 @@ button:hover{
 
 button:active{
   transform: translate(0, 0.3rem);
+  box-shadow: 0 0.1rem ;
+  box-shadow: 0 0.1rem rgba(125,125,125, 0.65);
+}
+
+.twitter-button:hover{
+  color: #38a1f3;
+}
+
+.fa-twitter{
+  font-size: 1.5rem;
 }
 
 /*
