--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body {
   font-style: italic;
 }
 
-.button-contianer{
+.button-container{
   margin-top: 15px;
   display: flex;
   justify-content: space-between;
@@ -83,16 +83,22 @@ button:active{
   font-size: 1.5rem;
 }
 
-/*
-#quote-containter{}
-#quote-author{}
-#author{}
-.twitter-button
-#twitter{}
-.fab fa-twitter{}
-#new-quote{}
-*/
+/* Loader */
 
+
+.loader {
+  border: 16px solid #f3f3f3; /* Light grey */
+  border-top: 16px solid black; /* Blue */
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
 
 
 /* Media Query: Tablet  or smaller*/
